[gd_scene load_steps=6 format=3 uid="uid://bmodular_npc"]

[ext_resource type="Script" path="res://scripts/ModularNPC.gd" id="1_modular_npc"]
[ext_resource type="PackedScene" path="res://assets/characters/AnimationLibrary_Godot_Standard.glb" id="2_character"]
[ext_resource type="Script" path="res://scripts/AnimationController.gd" id="3_anim_controller"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
height = 1.8
radius = 0.35

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]
radius = 2.0

[node name="ModularNPC" type="StaticBody3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_modular_npc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="CharacterModel" parent="." instance=ExtResource("2_character")]

[node name="InteractionArea" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_1")

[node name="AnimationController" type="Node" parent="."]
script = ExtResource("3_anim_controller")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]